adjustment to fix homepage overlap with footer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -161,7 +161,7 @@ link, button {
 
 .homepage-index {
     position:relative;
-    top: 440px;
+    margin-top: 440px;
     min-height: 100vh;
 
 }
